--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/platform-express": "^11.0.1",
     "@types/bcrypt": "^6.0.0",
     "bcrypt": "^6.0.0",
+    "class-validator": "^0.14.2",
     "mongoose": "^8.18.0",
     "ms": "^2.1.3",
     "nodemailer": "^7.0.6",
