--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/websockets": "^11.1.6",
     "@types/bcrypt": "^6.0.0",
     "bcrypt": "^6.0.0",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "mongoose": "^8.18.0",
     "ms": "^2.1.3",
