--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "fuse.js": "^7.1.0",
     "mongoose": "^8.18.0",
     "ms": "^2.1.3",
     "nodemailer": "^7.0.6",
