--- a/package.json
+++ b/package.json
@@ -35,11 +35,14 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "fuse.js": "^7.1.0",
+    "moment": "^2.30.1",
     "mongoose": "^8.18.0",
     "ms": "^2.1.3",
     "nodemailer": "^7.0.6",
+    "qs": "^6.14.0",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "vnpay": "^2.4.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
